Tabs no longer jump when switching

--- a/less/overrides.less
+++ b/less/overrides.less
@@ -2230,10 +2230,10 @@ body .runner-form-header {
 }
 
 .session_btn {
-    border-left: 0px solid #1d1d1d;
-    border-right: 0px solid #1d1d1d;
-    border-top: 0px solid #1d1d1d;
-    border-bottom: 0px solid #1d1d1d;
+    border-left: 1px solid @background;
+    border-right: 1px solid @background;
+    border-top: 0px solid @background;
+    border-bottom: 0px solid @background;
     margin-top: none !important;
     padding-top: none !important;
     transition: min-width 0.2s, background-color 0.2s;
